# ripgrep-wasm

./: Cargo.toml  GIT_CONFIG_COMMANDS.md  QUICK_START.sh  REPOSITORY_MIGRATION_SUMMARY.md  WASM_BUILD.md
crates/ignore/src/: walk.rs
crates/wasm/: .npmignore  API_REFERENCE.md  CHANGELOG.md  Cargo.toml  FINAL_SUMMARY.md  LICENSE  PACKAGE_NAME_UPDATE.md  README.md  VERIFICATION_REPORT.md  build.sh  example.js  package.json  tsconfig.json
crates/wasm/examples/: advanced-search.ts  basic-search.ts  node-directory-search.ts  webcontainer-integration.ts
crates/wasm/js/: errors.ts  index.ts  node-helpers.ts  sdk.ts  types.ts
crates/wasm/pkg/: ripgrep_wasm.d.ts  ripgrep_wasm.js  ripgrep_wasm_bg.wasm  ripgrep_wasm_bg.wasm.d.ts
crates/wasm/src/: errors.rs  lib.rs
