[package]
name = "ripgrep-wasm"
version = "0.1.0"
authors = ["ripgrep contributors"]
description = "WASM bindings for ripgrep to support webcontainer grep command"
license = "Unlicense OR MIT"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
grep-regex = { version = "0.1.14", path = "../regex" }
grep-searcher = { version = "0.1.16", path = "../searcher" }
grep-matcher = { version = "0.1.8", path = "../matcher" }
globset = { version = "0.4", path = "../globset" }
ignore = { version = "0.4", path = "../ignore" }
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
